QAC 99
Fix SonarQube detected issues